[project]
name = "module-20-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.8",
    "langchain-core>=1.4.6",
    "langchain-mistralai>=1.1.5",
    "mistralai>=2.4.9",
    "openai>=2.41.1",
    "openai-agents>=0.17.5",
    "streamlit>=1.58.0",
]
